Add context to index.html from index()

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -10,6 +10,8 @@
     <h1>Homepage</h1>
     <p>This is the Home page</p>
     <a href="/contact">Contact</a>
+    <h2>Names</h2>
+    {{ names }}
 </body>
 
 
