Add dynamic HTML

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -11,7 +11,7 @@
     <p>This is the Home page</p>
     <a href="/contact">Contact</a>
     <h2>Names</h2>
-    {{ names }}
+    {{ data }} <!-- Note this is automatically escaped -->
 </body>
 
 
