--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-</head>
-
-<body>
-    <h1>Contact</h1>
-    <p>This is the Contact page</p>
-    <a href="/">Homepage</a>
-</body>
+{% extends 'base.html' %}
+{% block title %}Contact{% endblock %}
+{% block content %}
+    <h1>This is contact page!</h1>
 
 
-</html>
+    
+{% endblock %}
