Add block super on Homepage

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -17,6 +17,8 @@
     </header>
     <main>
         {% block content %}
+        <h1>Welcome to my Django project!</h1>
+        
         {% endblock %}
     </main>
 </body>
