--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
-    <h1>Welcome to my Django project!</h1>
-
-
     
+    {{ block.super }}
+    
+    <h1>This is Home page!</h1>
+
+
+
 {% endblock %}
