--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -6,6 +6,10 @@
     
     <h1>This is Home page!</h1>
 
-
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">SUBMIT!</button>
+    </form>
 
 {% endblock %}
