Add widgets and access labels from backend

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -13,3 +13,28 @@
     </form>
 
 {% endblock %}
+
+<style>
+    form-control {
+        margin-top: 20px;
+        color: white;
+    }
+    input {
+        padding: 10px;
+        margin: 5px;
+    }
+    button {
+        padding: 10px;
+        margin: 5px;
+        background-color: #333;
+        color: white;
+        border: none;
+        cursor: pointer;
+    }
+    button:hover {
+        background-color: blue;
+    }
+    button:active {
+        background-color: #777;
+    }
+</style>
