--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -14,6 +14,8 @@
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
+                <li><a href="{% url 'search_student' %}">search student</a></li>
+                <li><a href="{% url 'search_teacher' %}">search teacher</a></li>
             </ul>
         </nav>
     </header>
@@ -23,5 +25,8 @@
         
         {% endblock %}
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
