--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -16,6 +16,7 @@
                 <li><a href="{% url 'contact' %}">Contact</a></li>
                 <li><a href="{% url 'search_student' %}">search student</a></li>
                 <li><a href="{% url 'search_teacher' %}">search teacher</a></li>
+                <li><a href="{% url 'search_restaurant' %}">search restaurant</a></li>
             </ul>
         </nav>
     </header>
